# course-udemy-ed-doner-agents

./: function-calling.ipynb  function-calling.py  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_extra.ipynb  utils.py
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  azure_assistants_rag_vector_store.ipynb  azure_client.py
2_openai/deep_research/: email_agent.py  planner_agent.py  research_manager.py  search_agent.py
3_crew/debate_arpit/: README.md  pyproject.toml
3_crew/debate_arpit/src/debate_arpit/: crew.py  main.py
3_crewai/coursework/financial_researcher/: pyproject.toml
3_crewai/coursework/financial_researcher/output/: report.md
3_crewai/coursework/financial_researcher/src/financial_researcher/: crew.py  main.py
3_crewai/coursework/financial_researcher/src/financial_researcher/config/: agents.yaml
3_crewai/coursework/researcher/: pyproject.toml  report.md
3_crewai/coursework/researcher/src/researcher/: crew.py  main.py
3_crewai/coursework/researcher/src/researcher/config/: agents.yaml
