[project]
name = "debate_arpit"
version = "0.1.0"
description = "debate_arpit using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
debate_arpit = "debate_arpit.main:run"
run_crew = "debate_arpit.main:run"
train = "debate_arpit.main:train"
replay = "debate_arpit.main:replay"
test = "debate_arpit.main:test"
run_with_trigger = "debate_arpit.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
